# Spectra

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  spectra  spectra.cmd  spectra.ps1  test_regex.py
.github/workflows/: spectra.yml
spectra-landing/: .env.example  index.html  package-lock.json  package.json  write_components.py  write_css.py
spectra-landing/api/: subscribe.js
spectra-landing/src/: App.css  App.jsx  index.css
spectra-landing/src/components/: Features.jsx  Footer.jsx  GithubCTA.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  StickyMobileCTA.jsx  Waitlist.jsx
spectra-landing/src/hooks/: useGithubStars.js  useTheme.js
src/prism/: __init__.py  __main__.py  ai.py  config.py  csv_parser.py  dashboard.py  db.py  pipeline.py  reporter.py  sheets.py
src/spectra/: __init__.py  __main__.py  ai.py  budget.py  config.py  csv_parser.py  cycles.py  dashboard.py  db.py  docker_start.py  fx.py  local_categorizer.py  ml_classifier.py  ofx_parser.py  pdf_parser.py  pipeline.py  recurring.py  reporter.py  sheets.py  trends.py
src/spectra/web/: server.py
src/spectra/web/static/: styles.css
src/spectra/web/templates/: base.html  budget.html  dashboard.html  settings.html  subscriptions.html  transactions.html  trends.html  upload.html
tests/: sample_isybank.csv  test_ai.py  test_csv_parser.py  test_cycles.py  test_db.py  test_docker_start.py  test_local_categorizer.py  test_pdf_parser.py  test_pipeline.py  test_recurring.py  test_web_server.py  test_web_server_unit.py
