[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "0.1.0"
description = "Privacy-first serverless pipeline: Open Banking → AI → Google Sheets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Francesco Gabrieli"},
]
keywords = ["open-banking", "fintech", "google-sheets", "ai", "psd2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "gspread>=6.1.0",
    "google-auth>=2.23.0",
    "google-api-python-client>=2.100.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
ml = [
    "scikit-learn>=1.3.0",
]

[project.scripts]
spectra = "spectra.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
