[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "0.3.0"
description = "Local-first personal finance dashboard for bank CSV/PDF imports, categorization, and review"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Francesco Gabrieli"},
]
keywords = ["open-banking", "fintech", "google-sheets", "ai", "psd2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "gspread>=6.1.0",
    "google-auth>=2.23.0",
    "google-api-python-client>=2.100.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rapidfuzz>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "tenacity>=8.0.0",
    "pdfminer.six>=20221105",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
spectra = "spectra.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
